<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbb"
    tools:context="com.example.avinash.myapplication.feature.MainActivity">

    <Button
        android:id="@+id/Sign_In2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp"
        android:onClick="onClick"
        android:text="@string/Sign_In" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Sign_In2"
        android:layout_below="@+id/Sign_In2"
        android:layout_marginTop="44dp"
        android:onClick="onClick"
        android:text="@string/Sign_Up" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/my_app"
        android:textSize="30sp" />
</android.widget.RelativeLayout>
