<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbb"
    tools:context="com.example.avinash.myapplication.feature.MainActivity">

    <Button
        android:id="@+id/Sign_In2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_view"
        android:layout_centerVertical="true"
        android:onClick="onClick"
        android:text="Sign IN" />

    <EditText
        android:id="@+id/editText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="Username/Email"
        android:inputType="textPersonName"
        android:text="@string/uname"
        android:visibility="visible" />


    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Sign_In2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:clickable="true"
        android:keyboardNavigationCluster="false"
        android:onClick="onClick"
        android:text="@string/fp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="@string/pwd"
        android:visibility="visible" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Sign_In2"
        android:layout_below="@+id/text_view"
        android:layout_marginTop="48dp"
        android:text="Google Sign In" />


</android.widget.RelativeLayout>
